[package]
name = "pusher-beams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.71"
reqwest = { version = "0.11.6", features = ["json"] }
thiserror = "1.0.30"
tokio = { version = "1.24.2", features = ["full"] }